<resources>
    <string name="app_name">DOC 980</string>
    <string name="date">Date</string>
    <string name="speciality">Speciality</string>
    <string name="doctor">Doctor</string>
    <string name="hospital">Hospital</string>
    <string name="reset">RESET</string>
    <string name="search">SEARCH</string>

    <string name="book_now">BOOK NOW </string>
    <string name="name">Name</string>
    <string name="nic">NIC</string>
    <string name="mobile">Mobile</string>
    <string name="password">Password</string>
    <string name="back">BACK</string>
    <string name="confirm">CONFIRM</string>

    <string name="date_hint">Select name here</string>
    <string name="speciality_hit">Select Speciality</string>
    <string name="doctor_hint">Select Doctor</string>
    <string name="hospital_hint">Select Hospital</string>
    <string name="name_hint">Type Your name</string>
    <string name="nic_hint">Type Your NIC</string>
    <string name="mobile_hint">Type your Mobile</string>
    <string name="password_hint">Type your Password</string>
    <string name="email">Email</string>
    <string name="hint_email">Type your Email</string>

</resources>