<?xml version="1.0" encoding="utf-8"?>

<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer_layout"
    tools:context=".BookActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/home_menu">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="20dp"
            android:layout_marginHorizontal="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@color/colorPrimary" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:layout_width="20dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/ic_menu"
                    android:onClick="ClickMenu"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="end"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <Button
                    android:layout_width="20dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/ic_home"
                    android:onClick="ClickHome"/>
            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

<LinearLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <com.airbnb.lottie.LottieAnimationView
        android:layout_marginTop="50dp"
        android:id="@+id/lottieAnimationView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:lottie_rawRes="@raw/form2"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"/>


    <EditText
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:elevation="6dp"
        android:paddingLeft="10dp"
        android:hint="@string/name_hint"
        android:textSize="15dp"
        android:id="@+id/name"
        android:background="@drawable/background_txt_home"/>

    <EditText
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:elevation="6dp"
        android:paddingLeft="10dp"
        android:hint="@string/nic_hint"
        android:textSize="15dp"
        android:id="@+id/nic"
        android:background="@drawable/background_txt_home"/>




    <EditText
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:elevation="6dp"
        android:paddingLeft="10dp"
        android:hint="@string/mobile_hint"
        android:textSize="15dp"
        android:id="@+id/mobile"
        android:background="@drawable/background_txt_home"/>


    <EditText
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:elevation="6dp"
        android:paddingLeft="10dp"
        android:hint="@string/hint_email"
        android:textSize="15dp"
        android:id="@+id/email"
        android:background="@drawable/background_txt_home"/>

    <LinearLayout
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/back"
            android:textSize="15dp"
            android:background="@drawable/baground_btn_mdmenu"
            android:textColor="@color/colorPrimary"
            android:layout_marginRight="10dp"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/confirm"
            android:textSize="15dp"
            android:background="@drawable/baground_btn_mdmenu"
            android:textColor="@color/colorPrimaryDark"
            android:layout_marginLeft="10dp"
            android:onClick="confirm"/>
    </LinearLayout>
</LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@android:color/white">

        <include layout="@layout/main_nav_drawer"/>

    </RelativeLayout>

</androidx.drawerlayout.widget.DrawerLayout>